"Сетевое взаимодействие в Kubernetes. Часть 2"/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-s
spec:
  selector:
    app: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-s
spec:
  selector:
    app: backend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
