"Сетевое взаимодействие в Kubernetes. Часть 2"/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-s
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-s
            port:
              number: 80
